updated pagination, swagger and ratings and tags in server
